@@ -2,7 +2,7 @@
 
 require 'rbosa'
 
-app = OSA.app_with_name('iChat')
+app = OSA.app('iChat')
 previous_status_message = app.status_message
 trap('INT') { app.status_message = previous_status_message; exit 0 }
 while true 
